Implemented token extraction using the Flurl library

--- a/ZoomMeeting/ZoomMeeting/ZoomMeeting.csproj
+++ b/ZoomMeeting/ZoomMeeting/ZoomMeeting.csproj
@@ -6,4 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Flurl" Version="4.0.0-pre4" />
+    <PackageReference Include="Flurl.Http" Version="4.0.0-pre6" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
+  </ItemGroup>
+
 </Project>
