--- a/ZoomMeeting/ZoomMeeting/ZoomMeeting.csproj
+++ b/ZoomMeeting/ZoomMeeting/ZoomMeeting.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Flurl" Version="4.0.0-pre4" />
     <PackageReference Include="Flurl.Http" Version="4.0.0-pre6" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.0.3" />
   </ItemGroup>
 
 </Project>
